fix: align EventCards left to match designs.

--- a/src/components/Blocks/UpcomingEvents/UpcomingEvents.module.scss
+++ b/src/components/Blocks/UpcomingEvents/UpcomingEvents.module.scss
@@ -17,7 +17,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
     width: 100%;
     gap: 30px;
     margin-top: 18px;
